не большие изменения в стилях и адаптации

--- a/resources/css/Content/reviews.css
+++ b/resources/css/Content/reviews.css
@@ -1,6 +1,5 @@
 .reviews {
-    padding: 50px 100px;
-    box-sizing: border-box;
+    padding: 50px 0;
 }
 .review-block {
     margin-bottom: 40px;
