--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    border: 0;
     box-sizing: border-box;
 }
 a {
@@ -10,34 +11,61 @@ a {
 a:hover {
     color: white;
 }
+html,
 body {
+    height: 100%;
     text-align:center;
     font-family: Raleway, sans-serif;
     background: #242B33;
 }
 
-/*Оцентровка*/
-#wrapper{
-    width: 1350px;
-    margin: 0 auto;
-    text-align: left;
-}
-
 /*Секция меню*/
-nav {
+.container{
+    max-width: 1350px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
     color: white;
-    display: flex;
-    align-items: center;
     font-family: Post No Bills Jaffna SemiBold, sans-serif;
     font-size: 14px;
-    margin-top: 10px;
- }
-li {
-    float: left;
-    margin-left: 16px;
 }
-.first_row {
-    margin-left: 60px;
+.header:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #242B33;
+    z-index: 2;
+}
+.header__body{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+.header__list{
+    display: flex;
+    position: relative;
+    z-index: 2;
+}
+.header__list li{
+  list-style: none;
+    margin: 0 0 0 20px;
+}
+.header__link{
+    color: #FFFFFF;
+}
+.header__burger {
+    display: none;
 }
 
 /*Логотип верхний*/
@@ -50,6 +78,7 @@ li {
     line-height: 54px;
     width: 100%;
     text-align: center;
+    margin-bottom: -10px;
 }
 .residential {
     margin-left: -3px;
@@ -61,6 +90,7 @@ li {
     height: 14px;
     width: 167px;
     text-align: center;
+    margin-bottom: 10px;
 }
 .title_name {
     font-family: 'Playfair Display', serif;
@@ -71,112 +101,97 @@ li {
     margin-bottom: 20px;
     text-align: center;
 }
+#logo-header{
+    /*margin-left: -30px;*/
+    position: relative;
+    z-index: 3;
+}
 
-@media (max-width:320px) {
-    #wrapper {
-        max-width: 320px;
+@media (max-width:767px) {
+    .title_name {
+        font-size: 30px;
     }
-    nav {
-        align-items: normal;
-        margin: 25px 0 0 64px;
-        display: block;
-        font-size: 16px;
+    body.lock{
+        overflow: hidden;
     }
-    .first_row {
-        margin: 25px 0 0 -45px;
-    }
-    li {
-        float: none;
-        font-size: 22px;
+    #logo-header{
+        margin-left: -30px;
     }
     .house {
-         font-size: 54px;
+        font-size: 27px;
     }
     .residential {
-        margin-left: 5px;
-        font-size: 12px;
+        font-size: 8px;
     }
-    .map-bottom {
-        margin: 0 5px;
+    .header__body{
+        height: 50px;
     }
-}
-
-@media (min-width: 321px) and (max-width: 375px) {
-    #wrapper {
-        max-width: 375px;
-    }
-    nav {
+   .header__burger {
         display: block;
-        margin-bottom: 30px;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 3;
     }
-    .logo-house {
-        margin-left: 100px;
-        margin-bottom: 20px;
+    .header__burger span{
+        position: absolute;
+        background-color: #FFFFFF;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
     }
-    li {
-        float: none;
-        font-size: 20px;
+    .header__burger:before,
+    .header__burger:after{
+        content: '';
+        background-color: #FFFFFF;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all 0.3s ease 0s;
     }
-    .map-bottom {
-        margin: 0 5px;
+    .header__burger:before{
+        top: 0;
     }
-}
+    .header__burger:after{
+        bottom: 0;
+    }
+    .header__burger.active:before{
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .header__burger.active:after{
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .header__burger.active span{
+        transform: scale(0);
 
-@media (min-width: 376px) and (max-width: 425px) {
-    #wrapper {
-        max-width: 425px;
     }
-    nav {
+    .header__menu{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: #242B33;
+        padding: 70px 10px 20px 10px;
+        transition: all 0.3s ease 0s;
+    }
+    .header__menu.active{
+        top: 0;
+    }
+    .header__list{
         display: block;
+        text-align: left;
     }
-    .logo-house {
-        margin-left: 100px;
-        margin-bottom: 20px;
-    }
-    li {
-        float: none;
-        font-size: 20px;
-    }
-    .map-bottom {
-        margin: 0 5px;
-    }
-}
-
-@media (min-width: 426px) and (max-width: 768px) {
-    #wrapper {
-        max-width: 768px;
-    }
-    .logo-house {
-        margin-left: 50px;
-        margin-bottom: 20px;
-    }
-    .map-bottom {
-        margin: 0 5px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    #wrapper {
-        max-width: 1024px;
-    }
-    li {
-        font-size: 20px;
-    }
-    .logo-house {
-        margin-left: 50px;
-        margin-bottom: 20px;
-    }
-    .map-bottom {
-        margin: 0 5px;
+    .header__list li{
+        margin: 0 0 10px 0;
     }
 
 }
-
-
-
-
-
-
-
 
 
