--- a/resources/css/Content/reviews.css
+++ b/resources/css/Content/reviews.css
@@ -42,45 +42,13 @@
 }
 .review-block {
     display: flex;
+    padding: 0 10px;
 }
 
-@media (max-width:320px) {
-    .reviews {
-        padding: 45px 10px;
-    }
-    .review-block {
+
+@media (max-width:767px) {
+    .review-block{
         display: block;
-    }
-    img.img-review,
-    img.img-review2,
-    img.img-review3
-    {
-        margin-left: 23px;
-    }
-    .review-author {
-        margin-left: 122px;
-        margin-top: -66px;
-    }
-    .reviews_title {
-        font-size: 33px;
+        text-align: left;
     }
 }
-
-@media (min-width: 321px) and (max-width: 375px) {
-    .reviews {
-        padding: 50px 10px;
-    }
-}
-
-@media (min-width: 376px) and (max-width: 425px) {
-}
-
-@media (min-width: 426px) and (max-width: 768px) {
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-}
-
-
-
-
