--- a/resources/css/Content/video.css
+++ b/resources/css/Content/video.css
@@ -1,33 +1,13 @@
-.video-block {
-    max-width: 1300px;
-}
 .video_name {
     margin: 1px 0 0 345px;
 }
 
-@media (max-width:320px) {
-    .video-block {
-        margin: 10px 0 0 -317px;
-    }
-    .video_name {
-        width: 300px;
-        height: 170px;
+@media (max-width:767px) {
+    .video_name{
+        margin: 0 auto;
+        width: auto;
+        height: 100%;
     }
 }
-
-@media (min-width: 321px) and (max-width: 375px) {
-}
-
-@media (min-width: 376px) and (max-width: 425px) {
-}
-
-@media (min-width: 426px) and (max-width: 768px) {
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-}
-
-
-
 
 
