Добавил Layout Ant Design на панель администратора. В верхнем меню Layout настроил работающие ссылки для перехода на вложенные маршруты. Разделил кнопки в главном меню сайта на три группы.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,11 +17,12 @@
 //@import "adaptiv_768";
 //@import "adaptiv_1100.css";
 
-
 @import 'login';
 @import 'client';
 
 @import "cabinet";
+
+@import "menuRight";
 
 @tailwind base;
 @tailwind components;
