Добавил спиннер во время загрузки.

--- a/resources/js/components/admin/styles/HousesList.module.scss
+++ b/resources/js/components/admin/styles/HousesList.module.scss
@@ -8,3 +8,9 @@
 .houseNumber__button {
 
 }
+
+.houseDescription__content {
+    @apply flex justify-center h-full}
+.contentSpinner{
+    @apply self-center
+}
