Установила react-pdf, реализовала скачивание квитанции в pdf по кнопке

--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -63,3 +63,9 @@ body > div:nth-child(2) > div > div.ant-modal-wrap > div > div.ant-modal-content
     color: #D4C17F;
     border-color: #D4C17F;
 }
+.meter-input {
+    text-align: left;
+}
+.meter-modal {
+    text-align: left;
+}
