Устранил глобальное переопределение цвета заголовка текста Collapse.

--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -18,7 +18,7 @@
 .end-cabinet {
     margin-bottom: 150px;
 }
-.ant-collapse>.ant-collapse-item >.ant-collapse-header .ant-collapse-header-text{
+.cabinet .ant-collapse-header-text{
     color: #FFFFFF;
 }
 
