--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -19,6 +19,11 @@ body {
     background: #242B33;
 }
 
+#wrapper{
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 /*Секция меню*/
 .container{
     max-width: 1350px;
