Настроил вывод сообщений о необходимости выбора улицы и номера дома.

--- a/resources/js/components/admin/styles/HousesList.module.scss
+++ b/resources/js/components/admin/styles/HousesList.module.scss
@@ -10,9 +10,15 @@
 }
 
 .houseDescription__content {
-    @apply flex justify-center h-full}
-.contentSpinner{
+    @apply flex justify-center h-full
+}
+
+.contentSpinner {
     @apply self-center
 }
-.contentLayout{
+
+.contentLayout {
 }
+.content__message{
+    @apply h-full text-2xl flex justify-center  items-center}
+
