--- a/resources/js/components/admin/styles/HousesList.css
+++ b/resources/js/components/admin/styles/HousesList.css
@@ -1,5 +1,8 @@
-.ant-collapse-header-text {
+.houses__collapse .ant-collapse>.ant-collapse-item >.ant-collapse-header {
+    display: flex;
+    align-items: center;
     color: #001529;
     font-size: 24px;
+    line-height: 40px;
     text-align: left;
 }
