--- a/resources/css/Identically/footer.css
+++ b/resources/css/Identically/footer.css
@@ -1,10 +1,10 @@
 Footer {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
 #footer {
     height: 100px;
-    align-items: center;
+
 }
 .house-footer {
     text-decoration: none;
