--- a/resources/css/news.css
+++ b/resources/css/news.css
@@ -1,8 +1,6 @@
 #news {
-    border: 1px solid #FFFFFF;
-    border-radius: 20px;
-    margin-top: 20px;
-    padding: 40px;
+    margin-top: 80px;
+    padding: 0 40px 10px 40px;
 }
 
 .news_text {
