--- a/resources/js/components/admin/styles/HousesList.module.scss
+++ b/resources/js/components/admin/styles/HousesList.module.scss
@@ -10,15 +10,18 @@
 }
 
 .houseDescription__content {
-    @apply flex justify-center h-full
-}
+    @apply flex justify-center h-2/3}
 
 .contentSpinner {
     @apply self-center
 }
 
 .contentLayout {
+    @apply min-h-screen
+}
+.content{
+    @apply h-2/3
 }
 .content__message{
-    @apply h-full text-2xl flex justify-center  items-center}
+    @apply h-full text-2xl flex justify-center  items-center h-2/3}
 
