--- a/resources/css/Content/flats.css
+++ b/resources/css/Content/flats.css
@@ -1,7 +1,3 @@
-.menu-flats {
-    width: 100%;
-    margin: 0 auto;
-}
 .flats-items {
     max-width: 1100px;
     display: flex;
@@ -17,8 +13,6 @@
     margin: 0 0 30px;
 }
 .flats-photo {
-    width: 535px;
-    height: 320px;
     position: absolute;
     border-radius: 10px;
 }
@@ -34,9 +28,21 @@
 }
 
 @media (max-width:767px) {
-    .flats-text {
-        font-size: 20px;
-        top: 230px;
-    }
+.flats-photo{
+    position: absolute;
+    display: block;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
+.flats-text {
+    top: 70px;
+    left: 130px;
+}
+.flats-items{
+    margin-top: 185px;
+}
+
+}
+
 
