--- a/resources/js/components/admin/styles/ClientsList.css
+++ b/resources/js/components/admin/styles/ClientsList.css
@@ -12,3 +12,9 @@
     border: 1px solid #d9d9d9;
     border-radius: 2px;
 }
+
+.editable-row .ant-form-item-explain {
+    position: absolute;
+    top: 100%;
+    font-size: 12px;
+}
