--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
 @import 'register';
 @import 'rates';
 @import 'about';
+@import 'video';
+@import 'watch';
 
 @import 'login';
 @import 'client';
