--- a/resources/js/components/admin/styles/EmployeesList.css
+++ b/resources/js/components/admin/styles/EmployeesList.css
@@ -18,9 +18,9 @@ button[type="button"].ant-btn-primary.ant-btn-dangerous{
 }
 
 .add{
-    @apply flex justify-end;
+    @apply flex justify-between
 }
 
 .add__button{
-    @apply mr-32 my-5;
+    @apply my-5;
 }
