--- a/resources/sass/flats.css
+++ b/resources/sass/flats.css
@@ -27,7 +27,7 @@
     left: 52px;
 }
 
-@media (max-width:850px) {
+@media (max-width:1250px) {
 .flats-photo{
     position: absolute;
     display: block;
@@ -42,7 +42,12 @@
 .flats-items{
     margin-top: 185px;
 }
+}
 
+@media (min-width: 1070px) and (max-width: 1250px) {
+    .flats-text {
+display: none;
+    }
 }
 
 
