--- a/resources/js/components/PasswordReq/PasswordReq.css
+++ b/resources/js/components/PasswordReq/PasswordReq.css
@@ -15,6 +15,13 @@
 }
 
 .text-accept-code{
-    color: limegreen;
+    color: green;
     font-size: 14px;
+    margin: 120px 0 20px;
 }
+
+.link-password{
+    color: limegreen;
+    font-size: 20px;
+}
+
