Пробный внешний вид заявки на специалиста без бека

--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -1,6 +1,13 @@
+.cabinet-txt-title {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.5;
+    color: #FFFFFF;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
 
-
-.cabinet-txt {
+.cabinet-txt{
     font-weight: 400;
     font-size: 20px;
     line-height: 1.5;
