--- a/resources/js/components/admin/styles/ClientsList.module.scss
+++ b/resources/js/components/admin/styles/ClientsList.module.scss
@@ -1,6 +1,7 @@
 .table__screen {
     min-height: 60vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
