Изменения стилей входа в личный кабинет

--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -75,10 +75,12 @@
     flex-direction: column;
     align-items: center;
 }
-.login-title {
-    font-family: 'Raleway', sans-serif;
-}
+
 .login-end-form {
     margin-bottom: 200px;
+}
+
+.login-title {
+    margin-left: 50px;
 }
 
