--- a/resources/sass/rates.css
+++ b/resources/sass/rates.css
@@ -2,6 +2,7 @@
     margin-top: 80px;
     padding: 0 10px 10px 10px;
     color: #FFFFFF;
+    font-family: 'Roboto', sans-serif;
 }
 .rates-name{
     color: goldenrod;
