--- a/resources/js/components/css/news.css
+++ b/resources/js/components/css/news.css
@@ -1,3 +1,12 @@
 .ant-list-vertical .ant-list-item .ant-list-item-meta .ant-list-item-meta-title {
     font-size: 24px;
 }
+
+@media (max-width: 1250px) {
+    .ant-list-lg .ant-list-item {
+        display: block;
+        padding: 0 10px 0 10px;
+    }
+
+}
+
