--- a/resources/sass/watch.css
+++ b/resources/sass/watch.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 .section_text {
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 15px;
     line-height: 1.5;
@@ -12,6 +13,7 @@
     margin-bottom: 10px;
 }
 .bottom_text {
+    font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
     font-size: 12px;
 }
