--- a/resources/sass/rates.css
+++ b/resources/sass/rates.css
@@ -1,8 +1,6 @@
 .rates {
-    margin-top: 80px;
     padding: 0 10px 10px 10px;
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
+    flex: 1 1 auto;
 }
 .rates-name{
     color: goldenrod;
