--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -1,12 +1,35 @@
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
 }
+
 a {
     text-decoration: none;
     color: inherit;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
 }
 a:hover {
     color: white;
@@ -14,13 +37,23 @@ a:hover {
 html,
 body {
     height: 100%;
+    line-height: 1;
+    color: #FFFFFF;
     /*font-family: Raleway, sans-serif;*/
     font-family: 'Roboto', sans-serif;
     background: #242B33;
+    margin: 0;
 }
 #wrapper{
     max-width: 1350px;
     margin: 0 auto;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+flex: 1 1 auto;
 }
 
 /*Логотип верхний*/
