--- a/resources/sass/flats.css
+++ b/resources/sass/flats.css
@@ -17,7 +17,7 @@
     border-radius: 10px;
 }
 .flats-text {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
