--- a/resources/sass/menu.css
+++ b/resources/sass/menu.css
@@ -1,4 +1,5 @@
 .navbar {
+    padding: 0 200px;
     position: fixed;
     left: 0;
     top: 0;
@@ -47,6 +48,9 @@
 }
 
 @media (max-width: 1250px) {
+    .navbar {
+        padding: 0;
+    }
     .navbar__wrap .menu {
         display: none;
     }
