--- a/resources/sass/watch.css
+++ b/resources/sass/watch.css
@@ -2,12 +2,19 @@
     background: url('/resources/js/components/img/watching-bg.png') center / cover no-repeat;
     padding: 150px 0;
 }
+.input-table {
+    display: flex;
+    justify-content: space-evenly;
+   align-items: center;
+    text-align: left;
+    margin: 0 200px;
+}
 .section_text {
     font-weight: 400;
     font-size: 15px;
     line-height: 1.5;
     color: #FFFFFF;
-    text-align: center;
+    text-align: left;
     margin-bottom: 10px;
 }
 .bottom_text {
@@ -15,22 +22,17 @@
     font-size: 12px;
 }
 .input-name{
-    padding: 7px 0 7px 7px;
+    padding: 5px 0 5px 20px;
     border-radius: 10px;
-
+    margin-bottom: 10px;
 }
 .input_button {
     border: 1px solid #FFFFFF;
     border-radius: 10px;
     color: #FFFFFF;
     font-size: 14px;
-    width: 198px;
-    padding: 8px 0 8px 0;
-}
-.form-section{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 100%;
+    padding: 5px 0;
 }
 
 @media (max-width:864px) {
@@ -45,5 +47,4 @@
         padding: 8px 0 8px 0;
     }
 }
-
 
