--- a/resources/js/components/UserCards/UserCards.module.css
+++ b/resources/js/components/UserCards/UserCards.module.css
@@ -7,7 +7,7 @@
     color: #D4C17F;
     margin: 140px 0 60px 0;
     font-size: 24px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .cards-photo{
