--- a/resources/sass/register.scss
+++ b/resources/sass/register.scss
@@ -63,3 +63,11 @@
 .reset-btn {
     margin-top: 50px;
 }
+
+.register-form-container {
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
