--- a/resources/js/components/admin/styles/MeterList.css
+++ b/resources/js/components/admin/styles/MeterList.css
@@ -1,5 +1,6 @@
 .bg-neutral-200 .ant-card-head {
-    background-color: rgb(115 115 115);
+    /*background-color: rgb(115 115 115);*/
+    background-color:  #001529;
     @apply text-white
 }
 
