--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+
 
 // Variables
 @import 'variables';
@@ -19,6 +19,7 @@
 @import 'footer';
 @import "menu";
 @import "reviews";
+@import "flats";
 
 @import 'login';
 @import 'client';
