--- a/resources/sass/flats.css
+++ b/resources/sass/flats.css
@@ -1,54 +1,44 @@
-.flats-items {
-    max-width: 1100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    list-style-type: none;
-    margin: 0 auto;
+.container_flats {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+    grid-gap: 10%;
+    margin: 2rem;
 }
-.flats-item {
-    width: 535px;
-    height: 320px;
-    margin: 0 0 30px;
-}
-.flats-photo {
-    position: absolute;
-    border-radius: 10px;
-}
-.flats-text {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    color: #FFFFFF;
+
+.book {
+    width: 100%;
+    height: 215px;
     position: relative;
-    top: 220px;
-    left: 52px;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-@media (max-width:1250px) {
-.flats-photo{
+.book span {
+    color: white;
+    font-size: 24px;
+    margin: 20px 0 0 20px;
+}
+
+.img_flats {
     position: absolute;
-    display: block;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}
-.flats-text {
-    top: 70px;
-    left: 130px;
-}
-.flats-items{
-    margin-top: 185px;
-}
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-@media (min-width: 1070px) and (max-width: 1250px) {
-    .flats-text {
-display: none;
-    }
+.book:hover {
+    transform: scale(1.035, 1.035);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+}
+
+.book:hover .img_flats {
+    transform: translateY(-10px);
 }
 
 
