--- a/resources/sass/watch.css
+++ b/resources/sass/watch.css
@@ -35,16 +35,16 @@
     padding: 5px 0;
 }
 
-@media (max-width:864px) {
-.form-section{
-    display: block;
-    text-align: center;
-}
-    .input-name{
-        margin-bottom: 10px;
+@media (max-width:768px) {
+    .input-table{
+        display: block;
+        margin: 0 20px;
     }
-    .input_button {
-        padding: 8px 0 8px 0;
+    .input-group{
+        text-align: center;
+    }
+    .input-name{
+        width: 100%;
     }
 }
 
