--- a/resources/sass/reviews.css
+++ b/resources/sass/reviews.css
@@ -6,26 +6,26 @@
     margin: 16px auto;
 }
 
-.container img {
-    float: left;
-    margin-right: 20px;
-    border-radius: 50%;
-    width: 80px;
-}
+/*.container img {*/
+/*    float: left;*/
+/*    margin-right: 20px;*/
+/*    border-radius: 50%;*/
+/*    width: 80px;*/
+/*}*/
 
-.container span {
-    font-size: 22px;
-    margin-right: 15px;
-}
+/*.container span {*/
+/*    font-size: 22px;*/
+/*    margin-right: 15px;*/
+/*}*/
 
 @media (max-width: 1250px) {
     .container {
         text-align: center;
     }
 
-    .container img {
-        margin: auto;
-        float: none;
-        display: block;
-    }
+    /*.container img {*/
+    /*    margin: auto;*/
+    /*    float: none;*/
+    /*    display: block;*/
+    /*}*/
 }
