--- a/resources/sass/reviews.css
+++ b/resources/sass/reviews.css
@@ -23,9 +23,9 @@
         text-align: center;
     }
 
-    /*.container img {*/
-    /*    margin: auto;*/
-    /*    float: none;*/
-    /*    display: block;*/
-    /*}*/
+    .container img {
+        margin: auto;
+        float: none;
+        display: block;
+    }
 }
