--- a/resources/js/components/PasswordReq/PasswordReq.css
+++ b/resources/js/components/PasswordReq/PasswordReq.css
@@ -1,8 +1,9 @@
 .change-email-mar{
+    flex: 1 1 auto;
     margin: 200px auto;
     max-width: 700px;
     color: #D4C17F;
-    font-family: 'Playfair Display', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -23,5 +24,9 @@
 .link-password{
     color: limegreen;
     font-size: 20px;
+}
+
+#passwordreq{
+    flex: 1 1 auto;
 }
 
